# flash-site-cursors

./: .dockerignore  .env.docker  .gitignore  ANALISE_IMPLEMENTACAO.md  ANKI_FEATURES_ANALYSIS.md  AVATAR_UPLOAD_FIXED.md  CLAUDE.md  CORS_ISSUE_FIXED.md  DOCKER_GUIDE.md  DescricaoProjeto.md  FLASHCARD_SYSTEM_DOCS.md  FLASHCARD_TYPES.md  INTEGRATION_PROGRESS.md  LOGIN_TOAST_TEST_RESULTS.md  Makefile  Makefile.backup  PLANO_FRONTEND.md  PROGRESS.md  Phrasal_Verbs_em_frases_Ingls_Pt_EnglishPt.apkg  README.md  README_OLD.md  TECHNICAL_BACKUP.md  TOAST_NOTIFICATIONS_GUIDE.md  Test_Flashcards.apkg  UPDATE_NODE_UBUNTU.md  check-admin-hardcoded.sh  clean-all-data.sh  create-courses.sh  create-simple-test-data.sh  debug-courses-display.sh  docker-compose.override.yml  docker-compose.postgres.yml  docker-compose.yml  legislation.json  melhorias-central-comando.html  migrate-questions.js  package-lock.json  package.json  populate-database.sql  populate-test-data.sh  (+58 more)
backend-rust/: .env.example  Cargo.simple.toml  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.simple  Makefile  PHASE_1_COMPLETE.md  PHASE_2_AUTH_COMPLETE.md  README.md  VERIFICATION.md  docker-compose.yml  test-endpoints.sh
backend-rust/src/: lib.rs  main.rs  main_simple.rs
backend-rust/src/config/: app.rs  database.rs  mod.rs
backend-rust/src/database/: connection.rs  mod.rs
backend-rust/src/error/: api_error.rs  mod.rs
backend-rust/src/handlers/: auth.rs  health.rs
backend-rust/src/middleware/: auth.rs  cors.rs
backend-rust/src/models/: course.rs  mod.rs  user.rs
backend-rust/src/services/: auth.rs  (+1 more)
(+434 files in other folders)
